front/src/styles/scss/common/map/_map.scss
@import 'mapSearch';

.no-mastnav .fullscreen {
  padding-top: 0 !important;
}
.btn-map-container {
  position: absolute;
  z-index: 2;
  right: 25px;
  top: 80px;
  button {
    display: block;
    font-size: 1.5rem;
    margin-bottom: 8px;
  }
  &.editor {
    top: 16px;
  }
}

.new-btn-map-container {
  position: absolute;
  z-index: 2;
  top: 0;
  right: 0;
  padding: 12px;

  .new-btn-map {
    color: var(--black100);
    width: 40px;
    height: 40px;
    padding: 12px;
    border-radius: 6px;
    outline: 3px solid rgba(152, 192, 245, 0.25);
    box-shadow: 0 0 0 1px var(--primary40) inset;
    background-color: rgba(255, 255, 255, 1);
    margin-block: 4px;

    &:hover {
      outline-color: var(--primary30);
      box-shadow: 0 0 0 1px var(--primary80) inset;
    }
    &:focus {
      outline: 3px solid var(--primary30);
      box-shadow: 0 0 0 1px var(--primary80) inset;
    }
    &:active {
      outline: 2px solid var(--primary30);
      box-shadow: 0 0 0 1px var(--primary80) inset;
    }

    span {
      display: flex;
      margin: auto;
      width: 16px;
      height: 16px;
    }
  }

  .new-btn-map-resetviewport {
    .compass-needle,
    .compass-cardinal {
      position: absolute;
      top: 16px;
      left: 18px;
      transform: translate(-40%, 0);
    }
  }
}

/* Map Settings */
.map-modal {
  position: absolute;
  z-index: 1;
  min-height: 80px;
  max-height: 80%;
  overflow: auto;
  top: 64px;
  right: 56px;
  padding: 16px;
  background-color: #fff;
  width: calc(100% - 88px);
  transition: 0.4s;
  margin: 16px;
  border-radius: 4px;
  border: 1px solid #d7d7d7;

  @media screen and (min-width: 640px) {
    max-width: 50%;
  }
  .sub-section-title {
    cursor: pointer;
    i {
      transition: transform 0.6s;
      margin-left: 16px;

      &.open {
        transform: rotate(180deg);
      }
    }
  }

  .actionbar {
    position: relative;
    top: 0;
    padding: 0;
    margin: 0 0 16px;
    height: auto;
  }

  &.map-modal-dark {
    background-color: var(--coolgray13);
    color: var(--coolgray1);
    border-color: var(--coolgray13);
  }
}

.mapstyle {
  button.mapstyle-style-select {
    border: none;
    background-color: #f2f2f2;
    padding: 0;
    display: flex;
    align-items: center;
    text-align: left;
    border-radius: 8px;
    margin-right: 16px;
    padding-right: 8px;
    img {
      width: 80px;
      border-radius: 8px 0 0 8px;
      margin-right: 8px;
    }
    font-size: 0.9rem;
    &:hover,
    &.active {
      background-color: #333;
      color: #fff;
    }
  }
}

.btn-map-resetviewport {
  .compass-needle,
  .compass-cardinal {
    position: absolute;
    top: 4px;
    left: 18.4px;
    transform: translate(-40%, 0);
  }
}

